Fix SCSS linting errors: quotes, units, and shorthand properties

--- a/src/app/pages/aml-monitoring/aml-kpis/aml-kpis.component.scss
+++ b/src/app/pages/aml-monitoring/aml-kpis/aml-kpis.component.scss
@@ -3,8 +3,8 @@
 @include nb-install-component() {
   .kpi-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(2, auto);
     gap: 1rem;
     margin-bottom: 1rem;
   }
