--- a/src/app/pages/aml-monitoring/alerts-trends-scenario/alerts-trends-scenario.component.scss
+++ b/src/app/pages/aml-monitoring/alerts-trends-scenario/alerts-trends-scenario.component.scss
@@ -185,7 +185,7 @@
               }
             }
             
-            input[type="checkbox"] {
+            input[type='checkbox'] {
               margin: 0;
             }
           }
