--- a/src/app/pages/aml-monitoring/aml-monitoring.component.scss
+++ b/src/app/pages/aml-monitoring/aml-monitoring.component.scss
@@ -11,7 +11,7 @@
     margin-bottom: 2rem;
     
     .card-header {
-      padding: 1.5rem 1.5rem 0 1.5rem;
+      padding: 1.5rem 1.5rem 0;
       border-bottom: 1px solid nb-theme(border-basic-color-3);
       margin-bottom: 1rem;
       display: flex;
@@ -60,7 +60,7 @@
     }
     
     .card-body {
-      padding: 0 1.5rem 1.5rem 1.5rem;
+      padding: 0 1.5rem 1.5rem;
     }
   }
 }
