--- a/src/app/pages/aml-monitoring/time-trend/time-trend.component.scss
+++ b/src/app/pages/aml-monitoring/time-trend/time-trend.component.scss
@@ -104,7 +104,7 @@
               }
             }
             
-            input[type="checkbox"] {
+            input[type='checkbox'] {
               margin: 0;
             }
           }
