--- a/src/app/pages/screening/screening.component.html
+++ b/src/app/pages/screening/screening.component.html
@@ -3,15 +3,21 @@
     <div class="col-12">
       <div class="card">
         <div class="card-header">
-          <h3>AML Screening Dashboard</h3>
-          <div class="header-actions">
-            <span *ngIf="lastRefresh" class="last-updated">
-              Last updated: {{ lastRefresh | date:'medium' }}
-            </span>
-            <button class="btn btn-primary btn-sm" (click)="onRefreshClicked()">
-              <i class="icon-refresh"></i>
-              Refresh Data
-            </button>
+          <div class="d-flex justify-content-between align-items-center">
+            <h3 class="mb-0">AML Screening Dashboard</h3>
+            <div class="header-actions d-flex align-items-center">
+              <button nbButton ghost status="basic" size="small" class="me-2" (click)="openPageInfo()" 
+                      title="View dashboard information">
+                <nb-icon icon="info-outline"></nb-icon>
+              </button>
+              <span *ngIf="lastRefresh" class="me-2 last-updated">
+                Last updated: {{ lastRefresh | date:'medium' }}
+              </span>
+              <button class="btn btn-primary btn-sm" (click)="onRefreshClicked()">
+                <i class="icon-refresh"></i>
+                Refresh Data
+              </button>
+            </div>
           </div>
         </div>
         <div class="card-body">
@@ -72,7 +78,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="chart-section">
+              <div class="chart-section pie-chart-section">
                 <h5>Screening work by investigator</h5>
                 <ngx-onboarding-investigator-pie [dateRange]="dateRange"></ngx-onboarding-investigator-pie>
               </div>
@@ -104,7 +110,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="chart-section">
+              <div class="chart-section pie-chart-section">
                 <h5>Periodic Screening work by investigator</h5>
                 <ngx-periodic-investigator-pie [dateRange]="dateRange"></ngx-periodic-investigator-pie>
               </div>
@@ -136,7 +142,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="chart-section">
+              <div class="chart-section pie-chart-section">
                 <h5>WU add beneficiary screening work by investigator</h5>
                 <ngx-wu-investigator-pie [dateRange]="dateRange"></ngx-wu-investigator-pie>
               </div>
